--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,7 @@
   --bg-color: #f6f6f6;
   // dark
   --border-color-dark: #444;
+  --border-color-darker: #353535;
   --bg-color-dark: #171717;
 }
 
