--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,6 +400,14 @@ pre#links-table {
   background-color: var(--border-color-dark);
 }
 
+.directory-name {
+  border-top: 1px solid var(--border-color-darker);
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  padding-top: 1rem;
+}
+
 .valetlinks-wrap {
   border-radius: 14px;
   background-color: #fff;
@@ -429,6 +437,9 @@ pre#links-table {
 .valetlinks-wrap .valetlinks-container .row {
   border-radius: 4px;
   display: flex;
+}
+.valetlinks-wrap .valetlinks-container .row.activated {
+  border-top: 10px solid var(--bg-color-dark);
 }
 .valetlinks-wrap .valetlinks-container .row:hover {
   background-color: #f9f9f9;
@@ -477,20 +488,27 @@ pre#links-table {
 }
 .valetlinks-wrap .header .col.url,
 .valetlinks-wrap .valetlinks-container .col.url {
-  flex: 0 1 calc(40% - 32px);
+  flex: 0 1 calc(40% - 48px);
   order: 2;
-  min-width: calc(40% - 32px);
+  min-width: calc(40% - 48px);
 }
 .valetlinks-wrap .header .col.url a,
 .valetlinks-wrap .valetlinks-container .col.url a {
   font-weight: 500;
   display: block;
 }
+.valetlinks-wrap .header .col.tools,
+.valetlinks-wrap .valetlinks-container .col.tools {
+  background-color: #111;
+  flex: 0 1 16px;
+  order: 5;
+  min-width: 16px;
+}
 .valetlinks-wrap .header .col.path,
 .valetlinks-wrap .valetlinks-container .col.path {
   text-align: right;
   flex: 0 1 10%;
-  order: 5;
+  order: 6;
   position: relative;
   padding: 0;
   min-width: 10%;
