--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/* stylelint-disable value-no-vendor-prefix */
+/* stylelint-disable declaration-block-no-duplicate-properties */
 :root {
   --active-color: #ba68c8;
   --border-color: #e0e0e0;
@@ -8,8 +10,6 @@
   --bg-color-dark: #171717;
 }
 
-/* stylelint-disable value-no-vendor-prefix */
-/* stylelint-disable declaration-block-no-duplicate-properties */
 body {
   color: #fff;
   background-repeat: no-repeat;
@@ -416,6 +416,7 @@ pre#links-table {
   color: #333;
   font-size: 0.875rem;
   text-align: center;
+  padding: 1.5rem 1px;
   width: 100%;
 }
 .valetlinks-wrap .header {
@@ -425,47 +426,63 @@ pre#links-table {
   color: #656565;
   font-weight: 600;
   text-transform: uppercase;
-  border-bottom: 1px solid var(--border-color);
   margin-bottom: 1rem;
   padding: 0.6rem 10px 0 0;
 }
-.valetlinks-wrap .header .col.grip {
+.valetlinks-wrap .header .col.gripcol {
+  flex: 0 1 48px;
   background-image: none !important;
   opacity: 1 !important;
+  max-width: 48px;
+}
+.valetlinks-wrap .header .col.path {
+  padding: 0.65rem 32px 0.65rem 0.5rem !important;
 }
 .valetlinks-wrap .valetlinks-container .row {
-  border-radius: 4px;
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
 }
 .valetlinks-wrap .valetlinks-container .row.group {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.35);
-  border-radius: 0;
+  background-color: #202020;
+  box-shadow: inset 0 -1px 0 0 rgba(255, 255, 255, 0.05);
+  position: relative;
 }
 .valetlinks-wrap .valetlinks-container .row.group div {
   padding: 0.65rem 0.5rem;
 }
 .valetlinks-wrap .valetlinks-container .row.group .grip {
-  flex: 0 1 32px;
+  flex: 0 1 48px;
   background: transparent url("../img/grip-light.svg") no-repeat center center;
   opacity: 0;
-  min-width: 32px;
+  min-width: 48px;
   cursor: move;
 }
 .valetlinks-wrap .valetlinks-container .row.group .label {
   flex: 1 1 auto;
-  font-size: 1.125rem;
+  font-size: 0.875rem;
   text-align: left;
+  text-transform: uppercase;
+}
+.valetlinks-wrap .valetlinks-container .row.group .label em {
+  font-style: normal;
 }
 .valetlinks-wrap .valetlinks-container .row.group .remove {
-  flex: 0 1 24px;
-  min-width: 24px;
+  flex: 0 1 36px;
+  text-align: right;
+  opacity: 0;
+  padding-right: 2.875rem;
+  min-width: 36px;
+}
+.valetlinks-wrap .valetlinks-container .row.group .remove .fas {
+  cursor: pointer;
 }
 .valetlinks-wrap .valetlinks-container .row:hover {
   background-color: #f9f9f9;
 }
-.valetlinks-wrap .valetlinks-container .row:hover.group .grip,
-.valetlinks-wrap .valetlinks-container .row:hover .col.grip {
+.valetlinks-wrap .valetlinks-container .row:hover.group .grip, .valetlinks-wrap .valetlinks-container .row:hover.group .remove,
+.valetlinks-wrap .valetlinks-container .row:hover .col.grip,
+.valetlinks-wrap .valetlinks-container .row:hover .col.remove {
   opacity: 0.5;
 }
 .valetlinks-wrap .valetlinks-container .row.ghost-class {
@@ -478,12 +495,12 @@ pre#links-table {
 }
 .valetlinks-wrap .header .col.grip,
 .valetlinks-wrap .valetlinks-container .col.grip {
-  flex: 0 1 32px;
+  flex: 0 1 48px;
   background: transparent url("../img/grip-light.svg") no-repeat center center;
   order: 1;
   opacity: 0;
   position: relative;
-  min-width: 32px;
+  min-width: 48px;
   cursor: move;
 }
 .valetlinks-wrap .header .col.site,
@@ -518,20 +535,13 @@ pre#links-table {
   font-weight: 500;
   display: block;
 }
-.valetlinks-wrap .header .col.tools,
-.valetlinks-wrap .valetlinks-container .col.tools {
-  flex: 0 1 16px;
-  background-color: #111;
-  order: 5;
-  min-width: 16px;
-}
 .valetlinks-wrap .header .col.path,
 .valetlinks-wrap .valetlinks-container .col.path {
   flex: 0 1 10%;
   text-align: right;
   order: 6;
   position: relative;
-  padding: 0;
+  padding: 0 24px 0 0;
   min-width: 10%;
   cursor: default;
 }
@@ -544,6 +554,7 @@ pre#links-table {
   padding: 1.5rem;
   background-color: #252525;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.07), 0 1px 14px 5px rgba(0, 0, 0, 0.15);
+  padding: 1.5rem 1px;
 }
 .dark-mode .valetlinks-wrap .header .col {
   color: #999;
